# OpenGL3D

./: CMakeLists.txt  OpenGL3D.sln
OpenGL3D/: Camera.cpp  Camera.h  Cube.cpp  Cube.h  GLRender.cpp  GLRender.h  GLSLShader.cpp  GLSLShader.h  GLTexture.cpp  GLTexture.h  Material.cpp  Mesh3D.cpp  Mesh3D.h  Model.cpp  Model.h  Object3D.cpp  Object3D.h  OpenGL3D.vcxproj  OpenGL3D.vcxproj.filters  Shader.shader  State.cpp  State.h  Triangle.cpp  Triangle.h  World.cpp  World.h  fileLoader.h  main.cpp  meshLoader.cpp  meshLoader.h
data/: Mesh.msh  cube.msh
data/msh/: cube-3d-shape.mtl  cube.msh
data/shaders/: fragment.shader  lightFragment.shader  lightVertex.shader  vertex.shader
data/textures/: nearestNeighbour.html
include/: AssetManager.hpp  Camera.hpp  Component.hpp  Cube.hpp  DirectionalLight.hpp  Entity.hpp  GLRender.hpp  GLSLShader.hpp  GLTexture.hpp  Input.hpp  Light.hpp  Material.hpp  Math.hpp  Mesh.hpp  Model.hpp  Object.hpp  OpenGLDebugger.hpp  Plane.hpp  PointLight.hpp  SpotLight.hpp  State.hpp  Triangle.hpp  World.hpp  fileLoader.hpp
lib/assimp/lib/: assimp-vc142-mt.exp  assimp-vc142-mt.lib
src/: AssetManager.cpp  Camera.cpp  Cube.cpp  DirectionalLight.cpp  Entity.cpp  GLRender.cpp  GLSLShader.cpp  GLTexture.cpp  Input.cpp  Light.cpp  Material.cpp  Mesh.cpp  Model.cpp  Object.cpp  Plane.cpp  PointLight.cpp  SpotLight.cpp  State.cpp  Triangle.cpp  World.cpp  main.cpp
